# raylib-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: EntityFactory.h  Gravity.h
include/Components/: InputComponent.h  Player.h  Sprite.h  TransformComponent.h
include/Managers/: SystemManager.h
include/Systems/: InputSystem.h  PlayerSystem.h  RenderSystem.h
resources/sprites/link/: link_sheet.txt
src/: EntityFactory.cpp  main.cpp
src/Managers/: SystemManager.cpp
src/Systems/: InputSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp
